Additional pages added

--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body>
     <div class="container">
       <header>
         <nav>
           <div class="logo">
-            <p class="kismetla">kismet</p>
+            <a href="./index.html" class="kismetla">kismet</a>
           </div>
           <div class="navbar">
-            <a href="#" class="kismetla">about</a>
-            <a href="#" class="kismetla">Cookbook</a>
+            <a href="./about.html" class="kismetla">about</a>
+            <a href="./cookbook.html" class="kismetla">Cookbook</a>
             <a href="#" class="kismetla">Menu</a>
             <a href="#" class="kismetla">Catering</a>
             <a href="#" class="kismetla">Resy</a>
             <a href="#" class="kismetla">Shop</a> 
+            <a href="#" class="kismetla">Ig</a> 
           </div>
           <div class="hambuger">
             <div class="line"></div>
@@ -30,10 +31,10 @@
 
       <div class="hambuger-menu">
         <div class="menu">
-          <a href="#" class="kismetla">about</a>
+          <a href="./about.html" class="kismetla">about</a>
         </div>        
         <div class="menu">
-          <a href="#" class="kismetla">Cookbook</a>
+          <a href="./cookbook.html" class="kismetla">Cookbook</a>
         </div>        
         <div class="menu">
           <a href="#" class="kismetla">Menu</a>
