--- a/cookbook.html
+++ b/cookbook.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Cookbook</title>
   </head>
@@ -54,44 +58,117 @@
       </div>
 
       <section>
-        
-      </section>
+        <div class="cookbook">
+          <div class="cookbook-header">
+            <div class="cookbook-cover">
+              <div class="left">
+                <img src="./Assets/cookbookHero (4).png" alt="" />
+                <img src="./Assets/cookbookHero (3).png" alt="" />
+              </div>
 
-      <footer>
-        <div class="footer-top">
-          <form action="get">
-            <h1>sign up for the kismet mailing list</h1>
-            <input
-              type="email"
-              name="email"
-              id="email"
-              placeholder="Your email address"
-            />
-            <input
-              type="submit"
-              name="submit"
-              value="Join"
-              class="submit-button w-button"
-            />
-          </form>
-
-          <div class="visit">
-            <p>visit kismet rotisserie</p>
+              <div class="center"></div>
+              <div class="right">
+                <img src="./Assets/cookbookHero (5).png" alt="" />
+                <div>
+                  <a href="#">Tour Details</a>
+                  <a href="#">Order Now</a>
+                </div>
+              </div>
+            </div>
           </div>
+          <div class="cookbook-text">
+            <div class="img"></div>
+            <article>
+              <p>
+                Starring more than 100 recipes, Kismet captures the casual,
+                superfresh, vegetable-forward cooking the award-winning Los
+                Angeles restaurants are known for.
+                <br />
+                <br />
+                Thoughtfully adapted for home cooks, recipes like Salty-Sweet
+                Persimmon Salad and Harissa Party Wings are a tantalizing blend
+                of casual California cool and vibrant Mediterranean-inspired
+                flavors.
+                <br />
+                <br />
+                Kismet has a delicious vibe that folds assertive, bright flavors
+                into dishes that can be served any night of the week or made to
+                celebrate special occasions.
+              </p>
+            </article>
+          </div>
+          <div class="grid-section">
+            <div class="grid-text">
+              <h3>Recipe Videos</h3>
+            </div>
 
+            <div class="main-grid">
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+              <div class="grid-image">
+                <div class="transparency"></div>
+              </div>
+            </div>
+
+            <div class="grid-text">
+              <h3>Cook with us!</h3>
+            </div>
+          </div>
           <div class="copywright">
-            <p>© 2023 Kismet All Rights Reserved</p>
+            <p>Photographs copyright © 2024 by Chris Bernabeo</p>
           </div>
+          <div class="order-btn"></div>
         </div>
-
-        <div class="footer-bottom">
-          <div class="links">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of use</a>
-            <a href="#">Accessibility</a>
-          </div>
-        </div>
-      </footer>
+      </section>
 
       <div class="bottom-slider">
         <div class="slider-track">
